[gd_scene load_steps=12 format=2]

[ext_resource path="res://chao/floor.png" type="Texture" id=1]
[ext_resource path="res://fase_faculdade/fase_escolha/escolha_boa2.gd" type="Script" id=2]
[ext_resource path="res://fase_faculdade/fase_escolha/escolha_fumar.gd" type="Script" id=3]
[ext_resource path="res://fase_faculdade/fase_escolha/cigarro_frame2.png" type="Texture" id=4]
[ext_resource path="res://fase_faculdade/fase_escolha/smoking3.png" type="Texture" id=5]
[ext_resource path="res://fase_faculdade/fase_escolha/smoking1.png" type="Texture" id=6]
[ext_resource path="res://fase_faculdade/fase_escolha/cigarro_frame3.png" type="Texture" id=7]
[ext_resource path="res://fase_faculdade/fase_escolha/smoking2.png" type="Texture" id=8]
[ext_resource path="res://fase_faculdade/fase_escolha/cigarro_frame1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
position = Vector2( 29, -1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.360784, 0.290196, 0.290196, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 516, 296 )
scale = Vector2( 5.64063, 10.2188 )
texture = ExtResource( 1 )

[node name="btn_boa" type="Button" parent="."]
margin_left = -51.0
margin_top = -32.0
margin_right = 489.0
margin_bottom = 626.0
flat = true
script = ExtResource( 2 )

[node name="boa" type="AnimatedSprite" parent="btn_boa"]
position = Vector2( 272, 328 )
scale = Vector2( 0.310625, 0.394583 )
frames = SubResource( 2 )
playing = true

[node name="btn_ruim" type="Button" parent="."]
margin_left = 485.0
margin_top = -27.0
margin_right = 1029.0
margin_bottom = 627.0
flat = true
expand_icon = true
script = ExtResource( 3 )

[node name="ruim" type="AnimatedSprite" parent="btn_ruim"]
position = Vector2( 255, 324 )
scale = Vector2( 0.3625, 0.473542 )
frames = SubResource( 1 )
frame = 1
playing = true

[connection signal="mouse_entered" from="btn_boa" to="btn_boa" method="_on_btn_boa_mouse_entered"]
[connection signal="mouse_exited" from="btn_boa" to="btn_boa" method="_on_btn_boa_mouse_exited"]
[connection signal="pressed" from="btn_boa" to="btn_boa" method="_on_btn_boa_pressed"]
[connection signal="mouse_entered" from="btn_ruim" to="btn_ruim" method="_on_btn_ruim_mouse_entered"]
[connection signal="mouse_exited" from="btn_ruim" to="btn_ruim" method="_on_btn_ruim_mouse_exited"]
[connection signal="pressed" from="btn_ruim" to="btn_ruim" method="_on_Button_pressed"]
